--- a/bbt.bib
+++ b/bbt.bib
@@ -467,7 +467,7 @@
   archiveprefix = {arXiv},
   eprint        = {2008.06812},
   abstract      = {Hoare logic provides a syntax-oriented method to reason about program correctness and has been proven effective in the verification of classical and probabilistic programs. Existing proposals for quantum Hoare logic either lack completeness or support only quantum variables, thus limiting their capability in practical use. In this article, we propose a quantum Hoare logic for a simple while language that involves both classical and quantum variables. Its soundness and relative completeness are proven for both partial and total correctness of quantum programs written in the language. Remarkably, with novel definitions of classical-quantum states and corresponding assertions, the logic system is quite simple and similar to the traditional Hoare logic for classical programs. Furthermore, to simplify reasoning in real applications, auxiliary proof rules are provided that support standard logical operation in the classical part of assertions and super-operator application in the quantum part. Finally, a series of practical quantum algorithms, in particular the whole algorithm of Shor's factorisation, are formally verified to show the effectiveness of the logic.},
-  keywords      = {quantum while language, quantum programming}
+  keywords      = {quantum while language, quantum programming, hoare logic}
 }
 
 @inproceedings{Fu2020,
@@ -983,17 +983,19 @@
   pages     = {187--207},
   doi       = {10.1007/978-3-030-25543-5_12},
   abstract  = {We formalize the theory of quantum Hoare logic (QHL) [TOPLAS 33(6),19], an extension of Hoare logic for reasoning about quantum programs. In particular, we formalize the syntax and semantics of quantum programs in Isabelle/HOL, write down the rules of quantum Hoare logic, and verify the soundness and completeness of the deduction system for partial correctness of quantum programs. As preliminary work, we formalize some necessary mathematical background in linear algebra, and define tensor products of vectors and matrices on quantum variables. As an application, we verify the correctness of Grover's search algorithm. To our best knowledge, this is the first time a Hoare logic for quantum programs is formalized in an interactive theorem prover, and used to verify the correctness of a nontrivial quantum algorithm.},
+  keywords  = {hoare logic},
   note      = {See also: Isabelle AFP entry, QHLProver \cite{Liu2019a}}
 }
 
 @misc{Liu2019a,
-  title   = {Quantum Hoare Logic},
-  author  = {Liu, Junyi and Zhan, Bohua and Wang, Shuling and Ying, Shenggang and Liu, Tao and Li, Yangjia and Ying, Mingsheng and Zhan, Naijun},
-  year    = {2019},
-  month   = mar,
-  journal = {Archive of Formal Proofs},
-  url     = {https://isa-afp.org/entries/QHLProver.html},
-  note    = {QHLProver-AFP, formal proof development in Isabelle, supplement to \cite{Liu2019}}
+  title    = {Quantum Hoare Logic},
+  author   = {Liu, Junyi and Zhan, Bohua and Wang, Shuling and Ying, Shenggang and Liu, Tao and Li, Yangjia and Ying, Mingsheng and Zhan, Naijun},
+  year     = {2019},
+  month    = mar,
+  journal  = {Archive of Formal Proofs},
+  url      = {https://isa-afp.org/entries/QHLProver.html},
+  keywords = {hoare logic},
+  note     = {QHLProver-AFP, formal proof development in Isabelle, supplement to \cite{Liu2019}}
 }
 
 @article{Mahmoud2019,
@@ -1198,6 +1200,7 @@
   archiveprefix = {arXiv},
   eprint        = {1904.04304},
   abstract      = {We survey the landscape of Hoare logics for quantum programs. We review three papers: ``Reasoning about imperative quantum programs'' by Chadha, Mateus and Sernadas; ``A logic for formal verification of quantum programs'' by Yoshihiko Kakutani; and ``Floyd-hoare logic for quantum programs'' by Mingsheng Ying. We compare the mathematical foundations of the logics, their underlying languages, and the expressivity of their assertions. We also use the languages to verify the Deutsch--Jozsa Algorithm, and discuss their relative usability in practice.},
+  keywords      = {hoare logic},
   note          = {Submitted as a qualifying examination (WPE-II) for the PhD program at the University of Pennsylvania.}
 }
 
@@ -1468,7 +1471,7 @@
   eprint        = {2012.02154},
   url           = {https://ks.cs.uchicago.edu/publication/qhtt-masters/},
   abstract      = {As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum programs. Inspired by Hoare Type Theory in classical computing, we propose Quantum Hoare Type Theory (QHTT), in which precise specifications about the modification to the quantum state can be provided within the type of computation. These specifications within a Hoare type are given in the form of Hoare-logic style pre- and postconditions following the propositions-as-types principle. The type-checking process verifies that the implementation conforms to the provided specification. QHTT has the potential to be a unified system for programming, specifying, and reasoning about quantum programs.},
-  keywords      = {formal verification, program proof, programming languages, quantum computing, quantum computation, type systems, type theory, pre- and postconditions, program specifications},
+  keywords      = {formal verification, program proof, programming languages, quantum computing, quantum computation, type systems, type theory, pre- and postconditions, program specifications, hoare logic},
   note          = {See also: \cite{Singhal2021a}}
 }
 
@@ -1497,7 +1500,7 @@
   doi       = {10.4204/EPTCS.340.15},
   url       = {https://ks.cs.uchicago.edu/publication/qhtt/},
   abstract  = {As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum programs. In classical computing, formal verification and sound static type systems prevent several classes of bugs from being introduced. There is a need for similar techniques in the quantum regime. Inspired by Hoare Type Theory in the classical paradigm, we propose Quantum Hoare Types by extending the Quantum IO Monad by indexing it with pre- and post-conditions that serve as program specifications. In this paper, we introduce Quantum Hoare Type Theory (QHTT), present its syntax and typing rules, and demonstrate its effectiveness with the help of examples. QHTT has the potential to be a unified system for programming, specifying, and reasoning about quantum programs. This is a work in progress.},
-  keywords  = {formal verification, program proof, programming languages, quantum computing, type systems, type theory, pre- and postconditions, program specifications},
+  keywords  = {formal verification, program proof, programming languages, quantum computing, type systems, type theory, pre- and postconditions, program specifications, hoare logic},
   note      = {Also see expanded version: \cite{Singhal2020a}}
 }
 
@@ -1611,7 +1614,7 @@
   archiveprefix = {arXiv},
   eprint        = {1902.00325},
   abstract      = {Quantum Hoare logic allows us to reason about quantum programs. We present an extension of quantum Hoare logic that introduces ``ghost variables'' to extend the expressive power of pre-/postconditions. Ghost variables are variables that do not actually occur in the program and are allowed to have arbitrary quantum states (in a sense, they are existentially quantified), and be entangled with program variables. Ghost variables allow us to express properties such as the distribution of a program variable or the fact that a variable has classical content. And as a case study, we show how quantum Hoare logic with ghost variables can be used to prove the security of the quantum one-time pad.},
-  keywords      = {quantum entanglement, quantum computing, probabilistic logic, computers, cryptography, semantics}
+  keywords      = {quantum entanglement, quantum computing, probabilistic logic, computers, cryptography, semantics, hoare logic}
 }
 
 @article{Valiron2015,
@@ -1824,7 +1827,7 @@
   pages    = {164--184},
   doi      = {10.1016/j.tcs.2021.10.025},
   abstract = {In this paper, we define the operational and denotational semantics of a special class of parallel quantum programs, namely disjoint parallel quantum programs. Based on them, a proof system for reasoning about disjoint parallel quantum programs is developed, which is (relatively) complete even when entanglement between different processes appears in the preconditions and postconditions.},
-  keywords = {quantum programming, quantum hoare logic, parallel programs, entanglement},
+  keywords = {quantum programming, quantum hoare logic, parallel programs, entanglement, hoare logic},
   note     = {Essentially the first part of \cite{Ying2018}}
 }
 
