--- a/bbt.bib
+++ b/bbt.bib
@@ -714,21 +714,23 @@
 }
 
 @article{Hietala2021,
-  title    = {A Verified Optimizer for {{Quantum}} Circuits},
-  author   = {Hietala, Kesha and Rand, Robert and Hung, Shih-Han and Wu, Xiaodi and Hicks, Michael},
-  year     = {2021},
-  month    = jan,
-  journal  = {Proceedings of the ACM on Programming Languages},
-  volume   = {5},
-  number   = {POPL},
-  eid      = {37},
-  pages    = {37},
-  numpages = {29},
-  doi      = {10.1145/3434318},
-  url      = {https://github.com/inQWIRE/SQIR},
-  abstract = {We present VOQC, the first fully verified optimizer for quantum circuits, written using the Coq proof assistant. Quantum circuits are expressed as programs in a simple, low-level language called SQIR, a simple quantum intermediate representation, which is deeply embedded in Coq. Optimizations and other transformations are expressed as Coq functions, which are proved correct with respect to a semantics of SQIR programs. SQIR uses a semantics of matrices of complex numbers, which is the standard for quantum computation, but treats matrices symbolically in order to reason about programs that use an arbitrary number of quantum bits. SQIR's careful design and our provided automation make it possible to write and verify a broad range of optimizations in VOQC, including full-circuit transformations from cutting-edge optimizers.},
-  keywords = {programming languages, formal verification, certified compilation, quantum computing, circuit optimization},
-  note     = {POPL '21}
+  title         = {A Verified Optimizer for {{Quantum}} Circuits},
+  author        = {Hietala, Kesha and Rand, Robert and Hung, Shih-Han and Wu, Xiaodi and Hicks, Michael},
+  year          = {2021},
+  month         = jan,
+  journal       = {Proceedings of the ACM on Programming Languages},
+  volume        = {5},
+  number        = {POPL},
+  eid           = {37},
+  pages         = {37},
+  numpages      = {29},
+  doi           = {10.1145/3434318},
+  archiveprefix = {arXiv},
+  eprint        = {1912.02250},
+  url           = {https://github.com/inQWIRE/SQIR},
+  abstract      = {We present VOQC, the first fully verified optimizer for quantum circuits, written using the Coq proof assistant. Quantum circuits are expressed as programs in a simple, low-level language called SQIR, a simple quantum intermediate representation, which is deeply embedded in Coq. Optimizations and other transformations are expressed as Coq functions, which are proved correct with respect to a semantics of SQIR programs. SQIR uses a semantics of matrices of complex numbers, which is the standard for quantum computation, but treats matrices symbolically in order to reason about programs that use an arbitrary number of quantum bits. SQIR's careful design and our provided automation make it possible to write and verify a broad range of optimizations in VOQC, including full-circuit transformations from cutting-edge optimizers.},
+  keywords      = {programming languages, formal verification, certified compilation, quantum computing, circuit optimization},
+  note          = {POPL '21}
 }
 
 @inproceedings{Hietala2021a,
